[package]
name = "dbuf_db"
version = "0.1.0"
edition = "2024"

[lib]
name = "lib"
path = "lib/src/lib.rs"

[dependencies]
"marble" =  "16.0.2"
bincode = { version = "2.0.1", features = ["derive", "alloc"] }
"thiserror" = "2.0.12"
lalrpop-util = { version = "0.21.0", features = ["lexer", "unicode"] }

[build-dependencies]
lalrpop = "0.21.0"
